thrive style  add

--- a/src/assets/scss/header/_header.scss
+++ b/src/assets/scss/header/_header.scss
@@ -2,6 +2,7 @@
     $header: &;
 
     background: url(../images/header/bg-header.jpg) no-repeat;
+    height: 100vh;
     max-height: 840px;
     background-position: center;
     background-size: cover;
