--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -9,7 +9,7 @@
 /* ===COMPONENTS=== */
 @import '../scss/components/nav';
 /* ===SECTION=== */
-@import '../scss/layout/thrive';
+@import '../scss/layout/therive';
 @import '../scss/layout/about';
 @import '../scss/layout/addition';
 @import '../scss/layout/contact';
