--- a/src/assets/scss/layout/_about.scss
+++ b/src/assets/scss/layout/_about.scss
@@ -2,23 +2,99 @@
     $about: &;
     display: flex;
     flex-direction: column;
+    padding: 150px 0 120px 0;
     align-items: center;
     grid-area: 3/1/3/4;
+    position: relative;
 
     &__inner {
         display: flex;
+        flex-direction: column;
         max-width: 592;
+        align-items: center;
+    }
+
+    &__title {
+        font-size: 1.6rem;
+        color: #22356F;
+        position: absolute;
+        left: 106px;
     }
 
     &__text {
         max-width: 592px;
         font-size: 2.4rem;
+        text-align: start;
         color: #22356F;
     }
 
     &__link {
         outline: none;
         text-decoration: none;
+        margin-top: 70px;
+        font-size: 1.6rem;
+        color: #2a3d77;
+    }
+
+    &__bottom {
+        margin-top: 25px;
+        display: flex;
+        width: 100%;
+    }
+
+    &__box {
+        max-width: 360px;
+        width: 100%;
+        height: 360px;
+        position: relative;
+
+        &::after {
+            content: '';
+            width: 255px;
+            height: 2px;
+            position: absolute;
+            top: 70px;
+            left: 52px;
+            background-color:white;
+            
+            
+        }
+
+
+
+        #{$about}__list {
+            display: flex;
+            justify-content: center;
+            margin-top: 95px;
+            list-style: none;
+
+            #{$about}__item {
+                font-size: 3.2rem;
+                color: white;
+
+                &::before {
+                    content: "•";
+                    color: red;
+                }
+
+            }
+        }
+
+        &:first-child {
+            background-color: #FFE2DE;
+        }
+
+        &:nth-child(2) {
+            background-color: #C4E769;
+        }
+
+        &:nth-child(3) {
+            background-color: #62D0DF;
+        }
+
+        &:last-child {
+            background-color: #0052C1;
+        }
     }
 
 
