--- a/src/assets/scss/layout/_about.scss
+++ b/src/assets/scss/layout/_about.scss
@@ -4,7 +4,6 @@
     flex-direction: column;
     padding: 150px 0 120px 0;
     align-items: center;
-    grid-area: 3/1/3/4;
     position: relative;
 
     &__inner {
@@ -39,6 +38,7 @@
     &__bottom {
         margin-top: 25px;
         display: flex;
+        justify-content: center;
         width: 100%;
     }
 
@@ -55,30 +55,32 @@
             position: absolute;
             top: 70px;
             left: 52px;
-            background-color:white;
-            
-            
+            background-color: white;
+
+
         }
 
 
 
-        #{$about}__list {
+
+
+
+        #{$about}__subtitle {
             display: flex;
             justify-content: center;
             margin-top: 95px;
-            list-style: none;
+            font-size: 3.2rem;
+            color: white;
+            position: relative;
 
-            #{$about}__item {
-                font-size: 3.2rem;
-                color: white;
-
-                &::before {
-                    content: "•";
-                    color: red;
-                }
-
+            &::before {
+                content: "•";
+                margin-right: 10px;
+                color: red;
             }
+
         }
+
 
         &:first-child {
             background-color: #FFE2DE;
@@ -95,7 +97,8 @@
         &:last-child {
             background-color: #0052C1;
         }
+
+
+
     }
-
-
 }
