--- a/src/assets/scss/header/_header.scss
+++ b/src/assets/scss/header/_header.scss
@@ -6,14 +6,12 @@
     max-height: 840px;
     background-position: center;
     background-size: cover;
-    grid-area: 1/1/1/4;
     display: flex;
-    justify-content: center;
-    padding: 30px 0 75px 0;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 30px 0 75px 180px;
 
     &__container {
-        max-width: 1130px;
-        width: 100%;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
@@ -25,6 +23,7 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
+        padding-right: 180px;
 
     }
 
