--- a/src/assets/scss/layout/_addition.scss
+++ b/src/assets/scss/layout/_addition.scss
@@ -1,12 +1,16 @@
 .addition {
     $addition: &;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
 
+    display: flex;
+    justify-content: center;
 
-    &__top {}
+    &__grid {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        max-width: 1440px;
+    }
 
-    &__box {
+    &__box-color {
         width: 480px;
         height: 480px;
         background-color: #22356F;
@@ -45,29 +49,28 @@
             background-color: #8F00FF;
         }
 
-        #{$addition}__list {
+        #{$addition}__subtitle {
             display: flex;
-            list-style: none;
-
-            #{$addition}__item {
-                margin: 126px 0 0 70px;
-                color: white;
-                font-size: 3.2rem;
+            margin: 126px 0 0 70px;
+            max-width: 180px;
+            color: white;
+            font-size: 3.2rem;
 
 
-                &::before {
-                    content: "•";
-                    color: #E9B730;
-                }
+            &::before {
+                content: "•";
+                margin-right: 10px;
+                color: #E9B730;
             }
         }
+
     }
 
-    &__box-botoom {
+    &__box-text {
         margin: 0 auto;
         max-height: 280px;
         height: 100vh;
-        
+
 
         #{$addition}__subtitle {
             align-content: flex-start;
@@ -84,4 +87,81 @@
             color: #22356F;
         }
     }
+
+    &__box-pic {
+        width: 100%;
+    }
+
+    &__box-assist {
+        display: flex;
+        flex-direction: column;
+        grid-area: 5/2/5/4;
+        margin-left: 106px;
+
+        #{$addition}__title {
+            margin-top: 103px;
+            font-size: 1.6rem;
+            color: #22356F;
+        }
+
+        #{$addition}__span {
+            margin-top: 225px;
+            max-width: 676px;
+            font-size: 3.6rem;
+            line-height: 53px;
+            color: #22356F;
+        }
+
+        #{$addition}__link-span {
+            text-decoration: none;
+            font-size: 3.6rem;
+            color: #6CD3E1;
+        }
+
+        #{$addition}__link {
+            margin-top: 152px;
+            text-decoration: none;
+            font-size: 1.6rem;
+            color: #FAB63E;
+        }
+    }
+
+    &__box-contact {
+        display: flex;
+        flex-direction: column;
+        padding-left: 180px;
+        max-width: 960px;
+        width: 100%;
+        background-color: #22356F;
+        grid-area: 6/1/6/3;
+
+        #{$addition}__title-contact {
+            margin-top: 70px;
+            font-size: 1.6rem;
+            color: white;
+        }
+
+        #{$addition}__subtitle-contact {
+            margin-top: 230px;
+            font-size: 6.4rem;
+            color: white;
+        }
+
+        #{$addition}__span-contact {
+            margin-top: 75px;
+            max-width: 579px;
+            font-size: 3.6rem;
+            line-height: 57px;
+            color: white;
+        }
+
+        #{$addition}__link-contact {
+            margin-top: 90px;
+            text-decoration: none;
+            font-size: 1.6rem;
+            color: white;
+        }
+    }
+
+
 }
