--- a/src/assets/scss/layout/_therive.scss
+++ b/src/assets/scss/layout/_therive.scss
@@ -1,23 +1,20 @@
 .therive {
     $therive: &;
 
-    grid-area: 2/1/2/4;
     display: flex;
-    height: 100vh;
-    max-height: 607px;
-    justify-content: center;
+    justify-content: space-between;
+    padding-left: 180px;
     background-color: #62D0DF;
     
 
     &__left {
-        margin-top: 100px;
-        max-width: 915px;
+        max-width: 555px;
         width: 100%;
         text-align: left;
         display: flex;
         flex-direction: column;
         align-self: center;
-        margin-left: 160px;
+        
     }
 
     &__title {
@@ -35,7 +32,6 @@
     &__right {
         max-width: 525px;
         width: 100%;
-        background: url(../images/therive/bg-thrive.png) no-repeat;
     }
 
 }
